tests/baselines/reference/parserIndexSignature7.errors.txt
==== tests/cases/compiler/parserIndexSignature7.ts (1 errors) ====
    interface I {
      [a:string]
      ~~~~~~~~~~
!!! parserIndexSignature7.ts(2,3): error TS1021: Index signature must have a type annotation.
    }